(issue #15) fixed steps-bar height and added scrollbar general.css: added rule for implementing scrollbar init_steps.js: added to match..height() function to adjust height of steps-bar

--- a/css/general.css
+++ b/css/general.css
@@ -152,6 +152,10 @@ input::-webkit-inner-spin-button {
     font-size: large;
 }
 
+div.steps {
+    overflow: auto;
+}
+
 .zero-instances {
     opacity: 0.3;
 }
